--- a/pom.xml
+++ b/pom.xml
@@ -127,6 +127,21 @@
       <version>3.3.7-1</version>
     </dependency>
 
+    <!-- OkHttp -->
+    <dependency>
+      <groupId>com.squareup.okhttp3</groupId>
+      <artifactId>okhttp</artifactId>
+      <version>3.14.2</version>
+    </dependency>
+
+    <!-- Json -->
+    <dependency>
+      <groupId>org.json</groupId>
+      <artifactId>json</artifactId>
+      <version>20160810</version>
+    </dependency>
+
+
   </dependencies>
 
   <build>
